--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
         "laravel-mix-jigsaw": "^2.0.0",
         "postcss": "^8.4.14",
         "postcss-import": "^14.0.0",
-        "tailwindcss": "^3.1.6"
+        "tailwindcss": "^3.1.6",
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/line-clamp": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.4",
+        "autoprefixer": "^10.4.7"
+    },
+    "dependencies": {
+        "@alpinejs/focus": "^3.10.3",
+        "alpinejs": "^3.10.3"
     }
 }
